--- a/Farmasi/Farmasi.csproj
+++ b/Farmasi/Farmasi.csproj
@@ -26,6 +26,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -285,6 +286,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="farmasi_24.04.2017.bak" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\slick\fonts\slick.eot" />
     <Content Include="Scripts\slick\fonts\slick.ttf" />
